tests/ui/reachable/expr_assign.stderr
error: unreachable expression
  --> $DIR/expr_assign.rs:10:5
   |
LL |     x = return;
   |     ^^^^------
   |     |   |
   |     |   any code following this expression is unreachable
   |     unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_assign.rs:5:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_assign.rs:20:9
   |
LL |         *p = return;
   |         ^^^^^------
   |         |    |
   |         |    any code following this expression is unreachable
   |         unreachable expression

error: unreachable expression
  --> $DIR/expr_assign.rs:26:15
   |
LL |     *{return; &mut i} = 22;
   |       ------  ^^^^^^ unreachable expression
   |       |
   |       any code following this expression is unreachable

error: aborting due to 3 previous errors

